# eos

./: .gitignore  .travis.sh  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dune-project  eos.opam  mkdocs.yml
.github/workflows/: build-and-test.yml
docs/: 0_Bigbang.md  1_Hyde.md  2_Metamorph.md  3_Crow.md  index.md
docs/sphinx/: conf.py  contact.rst  index.rst  install.rst  licence.rst  user.rst
docs/stages/: 1_Hyde.md  2_Metamorph.md  3_Crow.md
src/: .ocamlformat  dune  eos.ml
src/core/: FString.ml  FString.mli  cmdline.ml  cmdline.mli  comment.ml  comment.mli  comparator.ml  comparator.mli  conf.ml  conf.mli  dune  finder.ml  finder.mli  formatter.ml  formatter.mli  main.ml  monad.ml  monad.mli  reader.ml  reader.mli  update.ml  update.mli  writer.ml  writer.mli
tests/: dune  main_test.ml  test_comment.ml  test_comparator.ml  test_conf.ml  test_finder.ml  test_formatter.ml  test_fstring.ml  test_hello.ml  test_reader.ml  test_writer.ml  utilitaries.ml
tests/res/: Read_content.test  bad_comment.test  conf_content1.test  conf_content2.test  conf_content3.test  formatter_content1.test  formatter_content2.test  good_comment.test  writer.test
