opam-version: "2.0"

name: "eos"
version: "0.0"
license: "MIT"
synopsis: "Another header manager"
description: """
Eos is a simple header manager for your projects. It allows you to manage header
in one single JSON file and automatize many features.
"""

homepage: "https://github.com/maiste/eos"
bug-reports: "https://github.com/maiste/eos/issues"
dev-repo: "git://github.com/maiste/eos.git"

maintainer: [
    "Étienne (Maiste) Marais <etienne@marais.green>"
    " Xavier (Xavitator) Durand <xavier75013@gmail.com>"
]

authors: [
     "Étienne (Maiste) Marais <etienne@marais.green>"
    " Xavier (Xavitator) Durand <xavier75013@gmail.com>"
]

depends: [
    "dune"    {build}
    "ocaml"   {build & >= "4.07.0"}
    "odoc"     {build}
    "cmdliner"
    "alcotest"
    "ezjsonm"
    "cmdliner"
    "mustache"
    "fmt"
]

build: ["dune" "build" "-p" name "-j" jobs]

